results/pdf_generators/styles/scorelist.css
@page {
  size: 8.5in 14in;
  margin: 0;
}
* {
  margin: 0;
  box-sizing: border-box;
  font-family: Times-roman;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.container .list {
  display: flex;
  padding: 0 24px;
  width: 7.7in;
}
.container .list .list-item {
  width: 3.8in;
  padding: 50px 24px;
}
.container .list .list-item .heading {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.container .list .list-item .heading .top {
  width: 280px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  justify-content: flex-start;
}
.container .list .list-item .heading .top img {
  width: 50px;
}
.container .list .list-item .heading .top .title {
  margin-left: 20px;
  font-size: 1.2rem;
}
.container .list .list-item .heading .univ-name {
  width: 280px;
  margin-top: 3px;
  font-size: 1.1rem;
  text-align: center;
}
.container .list .list-item .heading .semester-name {
  width: 350px;
  font-size: 1rem;
  align-self: flex-start;
  margin-top: 1rem;
}
.container .list .list-item .heading .course-name {
  width: 350px;
  font-size: 1rem;
  align-self: flex-start;
  margin-top: 0;
}
.container .list .list-item .table-con {
  margin-top: 30px;
}
.container .list .list-item .table-con table {
  width: 100%;
  border-collapse: collapse;
}
.container .list .list-item .table-con table td, .container .list .list-item .table-con table tr, .container .list .list-item .table-con table thead {
  border: 1px solid black;
  text-align: center;
}
.container .list .list-item .table-con table tr td {
  font-size: 16px;
}
.container .list .list-item .table-con table tr td:nth-child(1) {
  width: 70px;
}
.container .list .list-item .table-con table tr td:nth-child(3) {
  width: 80px;
}
.container .list .list-item .table-con table tr.hidden-row {
  border: 0;
}
.container .list .list-item .table-con table tr.hidden-row td {
  border: 0;
  visibility: hidden;
}
.container table.examiner-table tr td {
  width: 1.8in;
  padding-top: 5rem;
}
.container table.examiner-table tr .exeminer-name {
  font-size: 1rem;
}
.container table.examiner-table tr:first-child td {
  padding-top: 2rem;
}

@font-face {
  font-family: BanglaFont;
  src: url(./fonts/kalpurush.ttf);
}
@font-face {
  font-family: BanglaUnicodeFont;
  src: url(./fonts/SutonnyMJRegular.ttf);
}
.bn-text {
  font-family: BanglaFont;
}

.bn-unicode-text {
  font-family: BanglaUnicodeFont;
}

.mt-1 {
  margin-top: 8px;
}

.mt-2 {
  margin-top: 16px;
}

.mt-3 {
  margin-top: 24px;
}

.mt-4 {
  margin-top: 32px;
}

.mt-5 {
  margin-top: 40px;
}

.page-break-after {
  page-break-after: always;
}/*# sourceMappingURL=scorelist.css.map */

